name:           avr-tft
version:        0.1.0.0
author:         Sergey Batin
maintainer:     the.batin@gmail.com
build-type:     Simple
cabal-version:  >=1.10

executable avr-tft
    main-is: Main.hs
    ghc-options: -Wall -threaded -O2 -rtsopts
    build-depends:
        array,
        base,
        bmp,
        bytestring,
        filepath,
        vector
    default-language: Haskell2010
